terraform/modules/vpc/main.tf

resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name        = "${var.project_name}-${var.environment}-vpc"
    Environment = "${var.environment}"
    Project     = "${var.project_name}"
  }

}

resource "aws_subnet" "public" {
  count                   = length(var.public_subnet_cidrs)
  availability_zone       = var.availability_zones[count.index]
  cidr_block              = var.public_subnet_cidrs[count.index]
  vpc_id                  = aws_vpc.main.id
  map_public_ip_on_launch = true
  tags = {
    Name        = "${var.project_name}-${var.environment}-public-subnet-${count.index + 1}"
    Environment = "${var.environment}"
    Type        = "public"
  }

}

resource "aws_subnet" "private" {
  count             = length(var.private_subnet_cidrs)
  vpc_id            = aws_vpc.main.id
  cidr_block        = var.private_subnet_cidrs[count.index]
  availability_zone = var.availability_zones[count.index]
  tags = {
    Name        = "${var.project_name}-${var.environment}-private-subnet-${count.index + 1}"
    Environment = "${var.environment}"
    Type        = "private"
  }

}

resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name        = "${var.project_name}-${var.environment}-internet-gateway"
    Environment = "${var.environment}"
    Project     = "${var.project_name}"
  }

}


resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route  {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }
  tags = {
    Name        = "${var.project_name}-${var.environment}-public-rtb"
    Environment = "${var.environment}"
    Project     = "${var.project_name}"
  }


}



resource "aws_route_table_association" "public" {
  count          = length(var.public_subnet_cidrs)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id


}


resource "aws_eip" "nat" {
    domain = "vpc"
    tags = {
     Name = "${var.project_name}-${var.environment}-nat-eip"
     Environment = "${var.environment}"
     Project     = "${var.project_name}"
    }
  
}

resource "aws_nat_gateway" "main" {
  subnet_id = aws_subnet.public[0].id
  allocation_id = aws_eip.nat.id
   tags = {
     Name = "${var.project_name}-${var.environment}-nat-gateway"
     Environment = "${var.environment}"
     Project     = "${var.project_name}"
    }
    depends_on = [ aws_internet_gateway.main ]
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.main.id
  }
  tags = {
    Name        = "${var.project_name}-${var.environment}-private-rtb"
    Environment = "${var.environment}"
    Project     = "${var.project_name}"
  }
}

resource "aws_route_table_association" "private" {
  count = length(var.private_subnet_cidrs)
  subnet_id = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
